--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <properties>
+        <category>Rest</category>
+        <project.version>3.9.0</project.version>
+        <spring.boot-version>2.4.5</spring.boot-version>
+        <jackson.swagger.version>2.9.10</jackson.swagger.version>
+        <java.version>1.8</java.version>
+    </properties>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
@@ -13,13 +22,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>demo</name>
     <description>Demo project for Spring Boot</description>
-    <properties>
-        <category>Rest</category>a
-        <project.version>3.9.0</project.version>
-        <spring.boot-version>2.4.5</spring.boot-version>
-        <jackson.swagger.version>2.9.10</jackson.swagger.version>
-        <java.version>1.8</java.version>
-    </properties>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
